# mlx-engine

./: .gitignore  CHANGELOG.md  README.md  batched_demo.py  mlx_engine_version.py  pyproject.toml  pyrightconfig.json
.planning/: .continue-here.md  HANDOFF.json  cheetara-replacement-plan.md  dflash-adaptive-quality-performance-decision-20260629T205452Z.json  dflash-capped-smoke-evidence-20260628T074326Z.json  dflash-capped-smoke-evidence-current.json  dflash-capped-smoke-evidence.json  dflash-phase-aware-preflight-evidence.json  dflash-resource-gate-evidence-smoke-precheck.json  internal-production-readiness-20260710.md  lmstudio-vlm-download-probe-20260708-m72.json  lmstudio-vlm-download-probe-20260708-m73.json  lmstudio-vlm-download-probe-20260708-m74.json  lmstudio-vlm-download-probe-20260709-m41.json  lmstudio-vlm-download-probe-20260709-m55.json  lmstudio-vlm-download-probe-20260709-m76.json  lmstudio-vlm-download-probe-20260709-m77.json  lmstudio-vlm-download-probe-20260709-m78.json  lmstudio-vlm-download-probe-20260709-m79.json  lmstudio-vlm-download-probe-20260709-m80.json  lmstudio-vlm-download-probe-20260709-m81.json  lmstudio-vlm-download-probe-20260709-m82.json  lmstudio-vlm-download-probe-20260709-m83.json  lmstudio-vlm-download-probe-20260710-m70.json  lmstudio-vlm-download-probe-20260710-m71.json  lmstudio-vlm-download-probe-20260710-m75.json  lmstudio-vlm-live-validation-20260709-m83.json  lmstudio-vlm-live-validation-20260709-m85.json  lmstudio-vlm-live-validation-preflight-20260708.json  lmstudio-vlm-live-validation-preflight-20260709-m83-shortkey.json  (+178 more)
(+145 files in other folders)
